--- a/resources/resource_ro_rootfs.yaml
+++ b/resources/resource_ro_rootfs.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod
+  name: myapp-pod-ro-rootfs
   labels:
     app: myapp
 spec: 
@@ -9,5 +9,5 @@ spec:
   - name: nginx
     image: nginx:1.12
     securityContext:
-        privileged: true
+      readOnlyRootFilesystem: true
 
