--- a/policies/require_ro_rootfs.yaml
+++ b/policies/require_ro_rootfs.yaml
@@ -1,7 +1,8 @@
 apiVersion: kyverno.io/v1
-kind: ClusterPolicy
+kind: Policy
 metadata:
   name: require-ro-rootfs
+  namespace: sandbox-s123456
   annotations:
     policies.kyverno.io/title: Require Read-Only Root Filesystem
     policies.kyverno.io/category: Best Practices
