--- a/resources/ingress_no_host.yaml
+++ b/resources/ingress_no_host.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minimal-ingress
+  namespace: sandbox-s123456
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
