--- a/resources/nodeport.yaml
+++ b/resources/nodeport.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service-node
+  namespace: sandbox-s123456
 spec:
   type: NodePort
   selector:
