--- a/resources/test-pod.yaml
+++ b/resources/test-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mypod
-  namespace: sandbox-s123456
+  namespace: default
   labels:
     name: mypod
 spec:
