--- a/policies/disallow_nodeport.yaml
+++ b/policies/disallow_nodeport.yaml
@@ -1,5 +1,5 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: restrict-nodeport
   annotations:
@@ -22,6 +22,9 @@ spec:
       resources:
         kinds:
         - Service
+        namespaceSelector:
+          matchLabels:
+            name: "sandbox-s*"
     validate:
       message: "Services of type NodePort are not allowed."
       pattern:
