--- a/policies/disallow_privilege_escalation.yaml
+++ b/policies/disallow_privilege_escalation.yaml
@@ -1,5 +1,5 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: disallow-privilege-escalation
   annotations:
@@ -22,6 +22,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            namespaceSelector:
+              matchLabels:
+                name: "sandbox-s*"
       validate:
         message: >-
           Privilege escalation is disallowed. The fields
