--- a/policies/disallow_privileged_containers.yaml
+++ b/policies/disallow_privileged_containers.yaml
@@ -1,5 +1,5 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: disallow-privileged-containers
   annotations:
@@ -22,6 +22,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            namespaceSelector:
+              matchLabels:
+                name: "sandbox-s*"
       validate:
         message: >-
           Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged
