--- a/policies/require_ro_rootfs.yaml
+++ b/policies/require_ro_rootfs.yaml
@@ -1,5 +1,5 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: require-ro-rootfs
   annotations:
@@ -22,6 +22,9 @@ spec:
       resources:
         kinds:
         - Pod
+        namespaceSelector:
+          matchLabels:
+            name: "sandbox-s*"
     validate:
       message: "Root filesystem must be read-only."
       pattern:
