--- a/policies/require_run_asnonroot.yaml
+++ b/policies/require_run_asnonroot.yaml
@@ -1,5 +1,5 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: require-run-as-nonroot
   annotations:
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            namespaceSelector:
+              matchLabels:
+                name: "sandbox-s*"
       validate:
         message: >-
           Running as root is not allowed. Either the field spec.securityContext.runAsNonRoot
