--- a/resources/load_balancer.yaml
+++ b/resources/load_balancer.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: example-lb
-  namespace: default
+  namespace: sandbox-s123456
 spec:
   selector:
     app: example
