--- a/resources/test-pod.yaml
+++ b/resources/test-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mypod
-  namespace: sandbox-s123456
+  namespace: "sandbox-s123456"
   labels:
     name: mypod
 spec:
@@ -12,7 +12,7 @@ spec:
     securityContext:
       privileged: true
       readOnlyRootFilesystem: true
-      allowPrivilegeEscalation: false
+      allowPrivilegeEscalation: true
   securityContext:
     runAsNonRoot: true
 
