--- a/policies/allow_restricted_hostname_ingress.yaml
+++ b/policies/allow_restricted_hostname_ingress.yaml
@@ -10,9 +10,8 @@ spec:
       resources:
         kinds:
         - Ingress
-        namespaceSelector:
-          matchLabels:
-            name: "sandbox-s*"
+        namespaces:
+        - "sandbox-s*"
     validate:
       message: "The host name must be in this form sxxxxxx.sandbox.crownlabs.polito.it."
       pattern:
